@@ -8,6 +8,7 @@
 
 {% block content %}
 <ul>
+<li>cocos Live v0.3.4 released <small><i><b>2009-08-06</b></i></small></li>
 <li>cocos Live v0.3.3 released <small><i><b>2009-07-14</b></i></small></li>
 <li>cocos Live v0.3.1 released <small><i><b>2009-04-21</b></i></small></li>
 <li>cocos Live v0.3.0 released <small><i><b>2009-03-20</b></i></small></li>
